# HOGSVMPedestrian

./: BOSSHog.cpp  BOSSHog.hpp  CMakeLists.txt  ClassifyLinear64x128.csv  ClassifyMain.cpp  DescriptorsMain.cpp  DetectionMain.cpp  DetectionSingleMain.cpp  GetGTmain.cpp  LinearSVM.cpp  LinearSVM.hpp  README.md  TrainGrid_Main.cpp  TrainLOO_Main.cpp  TrainedLinear.cpp  UANDES56x56SVMLINEAR0.002.csv  UANDES56x56SVMLINEAR0.1.csv  UANDES56x56SVMLINEAR0.125.csv  UANDES56x56SVMLINEAR1E-15.csv  UANDES56x56SVMLINEAR2.91E-11.csv  UANDES56x56SVMLINEAR3.815e-06.csv  UANDES56x56SVMLINEAR4.44E-16.csv  UANDES56x56SVMLINEAR7.63E-06.csv  UANDES56x56SVMLINEAR8.88E-16.csv  UANDES56x56SVMLINEAR9.31E-10.csv  UANDES56x56SVMLINEAR9.54E-07.csv  createDescriptors.cpp  createDescriptors.hpp  descriptor.hpp  functions.cpp  functions.hpp  tool.cpp  tool.hpp
ExperimentsSVMLinear/: .~lock.Experiments.ods#  Experiments.ods
UANDES56x56SVMLINEAR0.002/: A_d800mm_R1-SVM.xml  A_d800mm_R2-SVM.xml  A_d800mm_R3-SVM.xml  A_d800mm_R4-SVM.xml  A_d800mm_R5-SVM.xml  A_d800mm_R6-SVM.xml  A_d800mm_R7-SVM.xml  A_d800mm_R8-SVM.xml  B_No_d800mm_R1-SVM.xml  B_No_d800mm_R2-SVM.xml  B_No_d800mm_R3-SVM.xml  B_No_d800mm_R4-SVM.xml  B_No_d800mm_R5-SVM.xml  B_No_d800mm_R6-SVM.xml  B_No_d800mm_R7-SVM.xml
UANDES56x56SVMLINEAR0.1/: A_d800mm_R1-SVM.xml  A_d800mm_R2-SVM.xml  A_d800mm_R3-SVM.xml  A_d800mm_R4-SVM.xml  A_d800mm_R5-SVM.xml  A_d800mm_R6-SVM.xml  A_d800mm_R7-SVM.xml  A_d800mm_R8-SVM.xml  B_No_d800mm_R1-SVM.xml  B_No_d800mm_R2-SVM.xml  B_No_d800mm_R3-SVM.xml  B_No_d800mm_R4-SVM.xml  B_No_d800mm_R5-SVM.xml  (+2 more)
(+135 files in other folders)
