cmake_minimum_required(VERSION 2.8)
project( Descriptors  )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )

add_executable( Descriptors DescriptorsMain.cpp tool.cpp createDescriptors.cpp )
add_executable (TrainLOO TrainLOO_Main.cpp tool.cpp)
add_executable (TrainGrid TrainGrid_Main.cpp tool.cpp)
add_executable (Detection DetectionMain.cpp tool.cpp LinearSVM.cpp BOSSHog.cpp)
add_executable (DetectionSingle DetectionSingleMain.cpp tool.cpp LinearSVM.cpp BOSSHog.cpp)
add_executable (Classify ClassifyMain.cpp tool.cpp LinearSVM.cpp)

target_link_libraries( Descriptors ${OpenCV_LIBS} )
target_link_libraries (TrainLOO ${OpenCV_LIBS})
target_link_libraries (TrainGrid ${OpenCV_LIBS})
target_link_libraries (Detection ${OpenCV_LIBS})
target_link_libraries (DetectionSingle ${OpenCV_LIBS})
target_link_libraries (Classify ${OpenCV_LIBS})

set_target_properties (Descriptors PROPERTIES COMPILE_DEFINITIONS "ENABLEPAUSENOT;CHANGELABELSNOT;TRAIN_SVM_RBF")
set_target_properties (TrainLOO PROPERTIES COMPILE_DEFINITIONS "ENABLEPAUSENOT;CHANGELABELSNOT;TRAIN_SVM_LINEAR")
set_target_properties (Classify PROPERTIES COMPILE_DEFINITIONS "ENABLEPAUSE;CHANGELABELSNOT")
set_target_properties (DetectionSingle PROPERTIES COMPILE_DEFINITIONS "ENABLEPAUSE")
set_target_properties (TrainGrid PROPERTIES COMPILE_DEFINITIONS "ENABLEPAUSENOT;TRAIN_SVM_LINEAR")
